docs/envoy/v1.6.0/_sources/api-v2/config/filter/fault/v2/fault.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/fault/v2/fault.proto:

Common fault injection types
============================


.. _envoy_api_msg_config.filter.fault.v2.FaultDelay:

config.filter.fault.v2.FaultDelay
---------------------------------

`[config.filter.fault.v2.FaultDelay proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/config/filter/fault/v2/fault.proto#L14>`_

Delay specification is used to inject latency into the
HTTP/gRPC/Mongo/Redis operation or delay proxying of TCP connections.

.. code-block:: json

  {
    "type": "...",
    "percent": "...",
    "fixed_delay": "{...}"
  }

.. _envoy_api_field_config.filter.fault.v2.FaultDelay.type:

type
  (:ref:`config.filter.fault.v2.FaultDelay.FaultDelayType <envoy_api_enum_config.filter.fault.v2.FaultDelay.FaultDelayType>`) Delay type to use (fixed|exponential|..). Currently, only fixed delay (step function) is
  supported.
  
  
.. _envoy_api_field_config.filter.fault.v2.FaultDelay.percent:

percent
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) An integer between 0-100 indicating the percentage of operations/connection requests
  on which the delay will be injected.
  
  
.. _envoy_api_field_config.filter.fault.v2.FaultDelay.fixed_delay:

fixed_delay
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Add a fixed delay before forwarding the operation upstream. See
  https://developers.google.com/protocol-buffers/docs/proto3#json for
  the JSON/YAML Duration mapping. For HTTP/Mongo/Redis, the specified
  delay will be injected before a new request/operation. For TCP
  connections, the proxying of the connection upstream will be delayed
  for the specified period. This is required if type is FIXED.
  
  
  Precisely one of :ref:`fixed_delay <envoy_api_field_config.filter.fault.v2.FaultDelay.fixed_delay>` must be set.
  

.. _envoy_api_enum_config.filter.fault.v2.FaultDelay.FaultDelayType:

Enum config.filter.fault.v2.FaultDelay.FaultDelayType
-----------------------------------------------------

`[config.filter.fault.v2.FaultDelay.FaultDelayType proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/config/filter/fault/v2/fault.proto#L15>`_


.. _envoy_api_enum_value_config.filter.fault.v2.FaultDelay.FaultDelayType.FIXED:

FIXED
  *(DEFAULT)* ⁣Fixed delay (step function).
  
  
