docs/envoy/v1.10.0/_sources/api-v2/config/filter/fault/v2/fault.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/fault/v2/fault.proto:

Common fault injection types
============================


.. _envoy_api_msg_config.filter.fault.v2.FaultDelay:

config.filter.fault.v2.FaultDelay
---------------------------------

`[config.filter.fault.v2.FaultDelay proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/config/filter/fault/v2/fault.proto#L20>`_

Delay specification is used to inject latency into the
HTTP/gRPC/Mongo/Redis operation or delay proxying of TCP connections.

.. code-block:: json

  {
    "type": "...",
    "fixed_delay": "{...}",
    "header_delay": "{...}",
    "percentage": "{...}"
  }

.. _envoy_api_field_config.filter.fault.v2.FaultDelay.type:

type
  (:ref:`config.filter.fault.v2.FaultDelay.FaultDelayType <envoy_api_enum_config.filter.fault.v2.FaultDelay.FaultDelayType>`) Unused and deprecated. Will be removed in the next release.
  
  
.. _envoy_api_field_config.filter.fault.v2.FaultDelay.fixed_delay:

fixed_delay
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Add a fixed delay before forwarding the operation upstream. See
  https://developers.google.com/protocol-buffers/docs/proto3#json for
  the JSON/YAML Duration mapping. For HTTP/Mongo/Redis, the specified
  delay will be injected before a new request/operation. For TCP
  connections, the proxying of the connection upstream will be delayed
  for the specified period. This is required if type is FIXED.
  
  
  
  Precisely one of :ref:`fixed_delay <envoy_api_field_config.filter.fault.v2.FaultDelay.fixed_delay>`, :ref:`header_delay <envoy_api_field_config.filter.fault.v2.FaultDelay.header_delay>` must be set.
  
.. _envoy_api_field_config.filter.fault.v2.FaultDelay.header_delay:

header_delay
  (:ref:`config.filter.fault.v2.FaultDelay.HeaderDelay <envoy_api_msg_config.filter.fault.v2.FaultDelay.HeaderDelay>`) Fault delays are controlled via an HTTP header (if applicable).
  
  
  
  Precisely one of :ref:`fixed_delay <envoy_api_field_config.filter.fault.v2.FaultDelay.fixed_delay>`, :ref:`header_delay <envoy_api_field_config.filter.fault.v2.FaultDelay.header_delay>` must be set.
  
.. _envoy_api_field_config.filter.fault.v2.FaultDelay.percentage:

percentage
  (:ref:`type.FractionalPercent <envoy_api_msg_type.FractionalPercent>`) The percentage of operations/connections/requests on which the delay will be injected.
  
  
.. _envoy_api_msg_config.filter.fault.v2.FaultDelay.HeaderDelay:

config.filter.fault.v2.FaultDelay.HeaderDelay
---------------------------------------------

`[config.filter.fault.v2.FaultDelay.HeaderDelay proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/config/filter/fault/v2/fault.proto#L24>`_

Fault delays are controlled via an HTTP header (if applicable). See the
:ref:`http fault filter <config_http_filters_fault_injection_http_header>` documentation for
more information.

.. code-block:: json

  {}




.. _envoy_api_enum_config.filter.fault.v2.FaultDelay.FaultDelayType:

Enum config.filter.fault.v2.FaultDelay.FaultDelayType
-----------------------------------------------------

`[config.filter.fault.v2.FaultDelay.FaultDelayType proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/config/filter/fault/v2/fault.proto#L27>`_


.. _envoy_api_enum_value_config.filter.fault.v2.FaultDelay.FaultDelayType.FIXED:

FIXED
  *(DEFAULT)* ⁣Unused and deprecated.
  
  

.. _envoy_api_msg_config.filter.fault.v2.FaultRateLimit:

config.filter.fault.v2.FaultRateLimit
-------------------------------------

`[config.filter.fault.v2.FaultRateLimit proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/config/filter/fault/v2/fault.proto#L58>`_

Describes a rate limit to be applied.

.. code-block:: json

  {
    "fixed_limit": "{...}",
    "header_limit": "{...}",
    "percentage": "{...}"
  }

.. _envoy_api_field_config.filter.fault.v2.FaultRateLimit.fixed_limit:

fixed_limit
  (:ref:`config.filter.fault.v2.FaultRateLimit.FixedLimit <envoy_api_msg_config.filter.fault.v2.FaultRateLimit.FixedLimit>`) A fixed rate limit.
  
  
  
  Precisely one of :ref:`fixed_limit <envoy_api_field_config.filter.fault.v2.FaultRateLimit.fixed_limit>`, :ref:`header_limit <envoy_api_field_config.filter.fault.v2.FaultRateLimit.header_limit>` must be set.
  
.. _envoy_api_field_config.filter.fault.v2.FaultRateLimit.header_limit:

header_limit
  (:ref:`config.filter.fault.v2.FaultRateLimit.HeaderLimit <envoy_api_msg_config.filter.fault.v2.FaultRateLimit.HeaderLimit>`) Rate limits are controlled via an HTTP header (if applicable).
  
  
  
  Precisely one of :ref:`fixed_limit <envoy_api_field_config.filter.fault.v2.FaultRateLimit.fixed_limit>`, :ref:`header_limit <envoy_api_field_config.filter.fault.v2.FaultRateLimit.header_limit>` must be set.
  
.. _envoy_api_field_config.filter.fault.v2.FaultRateLimit.percentage:

percentage
  (:ref:`type.FractionalPercent <envoy_api_msg_type.FractionalPercent>`) The percentage of operations/connections/requests on which the rate limit will be injected.
  
  
.. _envoy_api_msg_config.filter.fault.v2.FaultRateLimit.FixedLimit:

config.filter.fault.v2.FaultRateLimit.FixedLimit
------------------------------------------------

`[config.filter.fault.v2.FaultRateLimit.FixedLimit proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/config/filter/fault/v2/fault.proto#L60>`_

Describes a fixed/constant rate limit.

.. code-block:: json

  {
    "limit_kbps": "..."
  }

.. _envoy_api_field_config.filter.fault.v2.FaultRateLimit.FixedLimit.limit_kbps:

limit_kbps
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The limit supplied in KiB/s.
  
  


.. _envoy_api_msg_config.filter.fault.v2.FaultRateLimit.HeaderLimit:

config.filter.fault.v2.FaultRateLimit.HeaderLimit
-------------------------------------------------

`[config.filter.fault.v2.FaultRateLimit.HeaderLimit proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/config/filter/fault/v2/fault.proto#L68>`_

Rate limits are controlled via an HTTP header (if applicable). See the
:ref:`http fault filter <config_http_filters_fault_injection_http_header>` documentation for
more information.

.. code-block:: json

  {}




